--- a/resume_tor.tex
+++ b/resume_tor.tex
@@ -85,7 +85,7 @@
 \section{Programming Skills}
 \resumeItemListStart
   \resumeItem{Languages/Databases}{: Python, Java, C\#, Golang, MongoDB, PostgresSQL, InfluxDB, Redis}
-  \resumeItem{APIs/Tools}{: Protobuf/gRPC, Kafka, RabbitMQ, Dapr, WebRTC, Helm, YAML, JSON, Stripe, Ceph, S3}
+  \resumeItem{APIs/Tools}{: Protobuf/gRPC, Kafka, RabbitMQ, Dapr, WebRTC, Helm, YAML, JSON, Stripe, Rook Ceph, S3, VCluster}
   \resumeItem{Frameworks}{: Spring-Boot, FastAPI, Flask, Django, Maven, Faust, Echo, SQLC}
   \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
   \resumeItem{Dev Ops}{: Kubernetes, AWS, GKS, K3s, Gitlab, Ansible, Docker, Gitlab Pipelines (CI/CD), Github Actions, Crossplane, Terraform, Git, Prometheus, Grafana}
@@ -148,8 +148,8 @@
     {University of Ottawa}{Ottawa, ON}
     {BSc. Honours Computer Science}{September 2017 - December 2024}
     \resumeItemListStart
-      \resumeItem{Notable Courses: }{Cryptography, Data Science, Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
-      \resumeItem{Clubs/Projects: }{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain, MSA Contributor}
+      \resumeItem{Notable Courses: }{Cryptography, Networking, Data Science, Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
+      \resumeItem{Clubs/Projects: }{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain, MSA Contributor, SemEval: Textual Emotion Cause-Pair Project}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
 
@@ -186,7 +186,11 @@
   {Kubernetes Based Homelab/Private Cloud}{January 2020 -}
     \resumeItemListStart
       \resumeItem{}
-      {Built and manage my own private cloud on kubernetes. Complete with public ingress, Ceph based storage, and a private PaaS.}
+      {Built and manage my own private cloud on kubernetes.}
+      \resumeItem{}
+      {Cloud like experience with public IP and cloud storage configured with Rook Ceph.}
+      \resumeItem{}
+      {Built my own PaaS using VCluster, and several operators, including a DBaaS, KaaS, and SaaS}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
 
