--- a/resume_tor.tex
+++ b/resume_tor.tex
@@ -183,7 +183,7 @@
     \resumeItemListEnd
   \resumeSubheading
   {Homelab}{Toronto, ON}
-  {Kubernetes Based Homelab/Private Cloud}{January 2020 -}
+  {Kubernetes Based Homelab/Private Cloud}{January 2020 - Current}
     \resumeItemListStart
       \resumeItem{}
       {Built and manage my own private cloud on kubernetes.}
