add RHEL experience

--- a/resume_tor.tex
+++ b/resume_tor.tex
@@ -5,8 +5,7 @@
 \usepackage{titlesec}
 \usepackage{marvosym}
 \usepackage[usenames,dvipsnames]{color}
-\usepackage{verbatim}
-\usepackage{enumitem}
+\usepackage{verbatim} \usepackage{enumitem}
 \usepackage[hidelinks]{hyperref}
 \usepackage{fancyhdr}
 \usepackage[english]{babel}
@@ -87,7 +86,7 @@
   \resumeItem{Languages/Databases}{: Python, Java, C\#, Golang, MongoDB, PostgresSQL, InfluxDB, Redis}
   \resumeItem{APIs/Tools}{: Protobuf/gRPC, Kafka, RabbitMQ, Dapr, WebRTC, Helm, YAML, JSON, Stripe, Rook Ceph, S3, VCluster}
   \resumeItem{Frameworks}{: Spring-Boot, FastAPI, Flask, Django, Maven, Faust, Echo, SQLC}
-  \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
+  \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, RHEL 7, RHEL 8, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
   \resumeItem{Dev Ops}{: Kubernetes, AWS, GKS, K3s, Gitlab, Ansible, Docker, Gitlab Pipelines (CI/CD), Github Actions, Crossplane, Terraform, Git, Prometheus, Grafana}
   \resumeItem{Soft Skills}{: Detail Oriented, Financial Technology, Market Technology, Business Requirements, Inter and intra team communication, Flexible, Team Oriented, Analytical, Systems Thinking, Customer Success}
   %\resumeItem{AI/Analytics}{: Tensorflow, Pytorch, Grafana, Graylog}
