--- a/cv_tor.tex
+++ b/cv_tor.tex
@@ -110,7 +110,7 @@
       \resumeItem{}
       {Increased code test coverage to 85\% and improved integration test framework to increase reliability and meet customer SLAs.}
       \resumeItem{}
-      {Implemented Tailor Made Combinations and other key financial business logic related to the FIX protocol.}
+      {Implemented Tailor Made Combinations (TMC's) and other key financial business logic related to the FIX protocol.}
       \resumeItem{}
       {Handled customer issues and requests from worldwide stock exchanges.}
       \resumeItem{}
@@ -175,6 +175,9 @@
       \resumeItem{Notable Courses: }{Cryptography, Networking, Data Science, Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
       \resumeItem{Clubs/Projects: }{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain, SemEval: AI Textual Emotion Cause-Pair Honours Project}
     \resumeItemListEnd
+  \resumeSubheading
+    {HRD University}{Qatar (Remote)}
+    {Lean Six Sigma and RPA Dynamics}{March 2025}
   \resumeSubheading
     {Richmond Green Secondary School}{Richmond Hill, ON}
     {High School}{September 2013 - June 2017}
