--- a/cv_tor.tex
+++ b/cv_tor.tex
@@ -83,12 +83,12 @@
 % Programming Skills
 \section{Programming Skills}
 \resumeItemListStart
-  \resumeItem{Languages/Databases}{: Python, Java, C\#, Golang, Kotlin, MongoDB, PostgresSQL, InfluxDB, Redis}
+  \resumeItem{Languages/Databases}{: Python, Java, C\#, C++, Golang, Scala, MongoDB, PostgresSQL, InfluxDB, Redis}
   \resumeItem{APIs/Tools}{: Protobuf/gRPC, Kafka, RabbitMQ, Dapr, WebRTC, Helm, YAML, JSON, Stripe, Rook Ceph, S3, Git}
   \resumeItem{Frameworks}{: Spring Boot MVC, Dropwizard, FastAPI, Flask, Django, Maven, Gradle, Faust, Echo, Gin, SQLC, Pydantic}
   \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, RHEL 7, RHEL 8, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox, Talos Linux, Kairos}
   \resumeItem{Dev Ops}{: ArgoCD , K3s, Gitlab, Ansible, Docker, Gitlab Pipelines (CI/CD), Github Actions, Crossplane, Terraform, Prometheus}
-  \resumeItem{Cloud}{: Kubernetes, AWS (Amazon Kubernetes Service), GKS (Google Kubernetes Service), AKS (Azure Kubernetes Service), Crossplane, VCluster, Kubevirt, Google Cloud Run, AWS Lambda, OpenFunctions}
+  \resumeItem{Cloud}{: Kubernetes, AWS [AKS, RDS, SNS, Lambda), GCP (Google Cloud Platform) [GKS, Cloud Run, Google Vision API] , Azure (Microsoft) [AKS], Crossplane, VCluster, Kubevirt, OpenFunctions (Contributor)}
   \resumeItem{Soft Skills}{: Detail Oriented, Financial Technology, Market Technology, Business Requirements, Inter and intra team communication, Flexible, Team Oriented, Analytical, Systems Thinking, Customer Success}
   \resumeItem{AI/Analytics}{: Tensorflow, Pytorch, Grafana, Graylog, Datadog, Streamlit (Python)}
   \resumeItem{Cyber Security/QA Testing}{: Wireshark, K6, Locust, Metasploit, Hashcat, Aircrack-ng, Kube-Hunter, Pytest, KubeTest, Ginkgo, JUnit, J2EE}
@@ -123,6 +123,10 @@
       {Performed chaos testing to ensure resilience and uptime of system, as well as assess self healing capabilities.}
       \resumeItem{}
       {Participated in SCRUM meetings, planning, and all aspects of the Software Development Lifecycle (SDLC) within an Agile team.}
+      \resumeItem{}
+      {Wrote service/dev environment/onboarding documentation, Reported bugs in JIRA tickets}
+      \resumeItem{}
+      {Impact: Improved developer productivity (through documentation and team building), enhanced AGILE SDLC process in the team (with communication), became a subject domain expert (FIX Protocol). Shipped key business features (TMC's and 24/7). Cut releases for big clients. Improved code reliability and QA process.}
     \resumeItemListEnd
 
   \resumeSubheading
@@ -145,6 +149,8 @@
       {Achieved 80\% unit test coverage for critical algorithms.}
       \resumeItem{}
       {Collaborated in Agile teams using the Scrum methodology under the supervision of ex-Salesforce, ex-Uber, ex-Microsoft software engineers.}
+      \resumeItem{}
+      {Impact: Successfully bootstrapped a startup and developed production grade polyglot (multi-language) microservice based software using containerization. In addition to developing ML/data science knowledge.}
     \resumeItemListEnd
 
   \resumeSubheading
@@ -161,6 +167,8 @@
       {Built online e-commerce store with scheduling system}
       \resumeItem{}
       {Integrated scheduling widgets into existing website platforms.}
+      \resumeItem{}
+      {Impact: Managed a small team and business stakeholders to perform client requests.}
     \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -200,6 +208,8 @@
       {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
       \resumeItem{}
       {https://devpost.com/software/sanitation-station-companion}
+      \resumeItem{}
+      {Impact: Deployed a working multi tiered embedded/cloud application using Google Cloud in a Hackathon}
     \resumeItemListEnd
   \resumeSubheading
   {Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
@@ -207,6 +217,8 @@
     \resumeItemListStart
       \resumeItem{}
       {Developed a user-focused carbon credit Android application with a SQL backend within 24 hours.}
+      \resumeItem{}
+      {Impact: Worked in a high stakes environment as sole tech member of a business hackathon.}
     \resumeItemListEnd
   \resumeSubheading
   {Open Source Contribution}{Toronto, ON}
@@ -216,6 +228,8 @@
       {Exposed lower level APIs for business use cases}
       \resumeItem{}
       {Improved documentation for both developers and project consumers}
+      \resumeItem{}
+      {Impact: Practiced Contribution Guidelines and Documentation standards/skills.}
     \resumeItemListEnd
   \resumeSubheading
   {Open Source Contribution}{Toronto, ON}
@@ -225,6 +239,8 @@
       {Reported bugs with appropriate documentation.}
       \resumeItem{}
       {Communicated with maintainers to discuss bugs and features.}
+      \resumeItem{}
+      {Impact: Practiced Efficient Bug Reporting in Open Source Software}
     \resumeItemListEnd
   \resumeSubheading
   {Homelab}{Toronto, ON}
@@ -233,7 +249,7 @@
       \resumeItem{}
       {Built and manage my own private cloud on Kubernetes.}
       \resumeItem{}
-      {Evolved from Proxmox to entirely GitOps (using ArgoCD) based GPU enabled private cloud.}
+      {Evolved from Proxmox to entirely Kubernetes GitOps (using ArgoCD) based GPU enabled private cloud.}
       \resumeItem{}
       {Cloud like experience with public IP LoadBalancer provisioning (chisel operator) and cloud storage configured with Rook Ceph.}
       \resumeItem{}
@@ -242,6 +258,8 @@
       {Nested virtualization and K8s-in-K8s with managed Control Plane using Kubevirt, CAPI (Cluster API), Kamaji}
       \resumeItem{}
       {Functions as a Service provided by OpenFunction}
+      \resumeItem{}
+      {Impact: Perfect Sandbox to teach me modern DevOps and deployment as well as cloud automation techniques at a production grade level.}
     \resumeItemListEnd
   \resumeSubheading
   {Estatelamp}{Toronto, ON}
